--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.9.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/erikras/react-redux-universal-hot-example"
+    "url": "https://github.com/AndriyShepitsen/svredux"
   },
   "homepage": "https://github.com/erikras/react-redux-universal-hot-example",
   "keywords": [
@@ -44,7 +44,6 @@
       "env": {
         "NODE_PATH": "./src",
         "NODE_ENV": "production",
-        "PORT": 8080,
         "APIPORT": 3030
       }
     },
@@ -88,7 +87,7 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
-    "history": "^1.13.0",
+    "history": "1.13.0",
     "file-loader": "^0.8.5",
     "hoist-non-react-statics": "^1.0.3",
     "http-proxy": "^1.12.0",
@@ -106,7 +105,7 @@
     "react-dom": "^0.14.1",
     "react-inline-css": "^2.0.0",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^1.0.2",
     "react-router-bootstrap": "^0.19.3",
     "redux": "^3.0.4",
     "redux-form": "^3.0.12",
